# securepath

./: .dockerignore  .env  .env.example  .gitignore  BRANCH_INFO.md  CLAUDE.md  LICENSE  MIGRATION_GUIDE.md  Procfile  README.md  README_REFACTORED.md  REFACTORING_COMPLETE.md  REFACTORING_RECAP.md  SETUP_GUIDE.md  config.py  database.py  main.py  main_new.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  switch_branch.sh  test_bot.py
.github/workflows/: test.yml
cache/: cache.db  cache.db-shm
perplexity_cache/: cache.db
securepath/: __init__.py  __main__.py  cli.py  config.py  models.py  policy.py  presentation.py  provenance.py  service.py
securepath/connectors/: __init__.py  base.py  fixture.py  live.py
securepath/fixtures/: __init__.py  validator_controls.json
securepath/integrations/: __init__.py  discord_bot.py
src/: __init__.py
src/ai/: __init__.py  ai_manager.py  openai_service.py  perplexity_service.py  vision_service.py
src/bot/: __init__.py  client.py  events.py
src/bot/cogs/: __init__.py  admin_commands.py  ai_commands.py  summary_commands.py
src/config/: __init__.py  constants.py  settings.py
src/database/: __init__.py  connection.py  models.py
src/services/: context_manager.py  rate_limiter.py
src/utils/: __init__.py  discord_helpers.py  formatting.py  validators.py
testing_files/: test_basic_imports.py  test_direct_imports.py  test_imports.py
tests/: __init__.py  test_cli.py  test_config.py  test_connectors.py  test_policy.py  test_presentation.py  test_provenance.py  test_replay.py
(+3 files in other folders)
